crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_sharing__different_builtin.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_sharing.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
addInteger (subtractInteger 100 1) (multiplyInteger 100 2)
--- unoptimized UPLC
(program 1.1.0
  [[(builtin addInteger)
    [[(builtin subtractInteger) (con integer 100)] (con integer 1)]]
    [[(builtin multiplyInteger) (con integer 100)] (con integer 2)]])
--- optimized Core
299
--- optimized UPLC
(program 1.1.0 (con integer 299))
--- isolated pass
--- uplc before
[[(builtin addInteger)
  [[(builtin subtractInteger) (con integer 100)] (con integer 1)]]
  [[(builtin multiplyInteger) (con integer 100)] (con integer 2)]]
--- uplc after
[[(builtin addInteger)
  [[(builtin subtractInteger) (con integer 100)] (con integer 1)]]
  [[(builtin multiplyInteger) (con integer 100)] (con integer 2)]]
--- result
(con integer 299)
--- logs
[]
