crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_sharing__first_literal_only.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_sharing.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
appendByteString (sliceByteString 1 2 (con bytestring #01020304)) (sliceByteString 1 3 (con bytestring #01020304))
--- unoptimized UPLC
(program 1.1.0
  [[(builtin appendByteString)
    [[[(builtin sliceByteString) (con integer 1)] (con integer 2)]
      (con bytestring #01020304)]]
    [[[(builtin sliceByteString) (con integer 1)] (con integer 3)]
      (con bytestring #01020304)]])
--- optimized Core
(con bytestring #0203020304)
--- optimized UPLC
(program 1.1.0 (con bytestring #0203020304))
--- isolated pass
--- uplc before
[[(builtin appendByteString)
  [[[(builtin sliceByteString) (con integer 1)] (con integer 2)]
    (con bytestring #01020304)]]
  [[[(builtin sliceByteString) (con integer 1)] (con integer 3)]
    (con bytestring #01020304)]]
--- uplc after
[(lam partial_1
  [[(builtin appendByteString)
    [[partial_1 (con integer 2)] (con bytestring #01020304)]]
    [[partial_1 (con integer 3)] (con bytestring #01020304)]])
  [(builtin sliceByteString) (con integer 1)]]
--- result
(con bytestring #0203020304)
--- logs
[]
