crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_sharing__two_scopes.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_sharing.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
addInteger ((\x#1 : int -> subtractInteger 100 x#1) 1) ((\y#2 : int -> subtractInteger 100 y#2) 2)
--- unoptimized UPLC
(program 1.1.0
  [[(builtin addInteger)
    [(lam x_1 [[(builtin subtractInteger) (con integer 100)] x_1]) (con integer 1)]]
    [(lam y_2 [[(builtin subtractInteger) (con integer 100)] y_2]) (con integer 2)]])
--- optimized Core
197
--- optimized UPLC
(program 1.1.0 (con integer 197))
--- isolated pass
--- uplc before
[[(builtin addInteger)
  [(lam x_1 [[(builtin subtractInteger) (con integer 100)] x_1]) (con integer 1)]]
  [(lam y_2 [[(builtin subtractInteger) (con integer 100)] y_2]) (con integer 2)]]
--- uplc after
[(lam partial_3
  [[(builtin addInteger) [(lam x_1 [partial_3 x_1]) (con integer 1)]]
    [(lam y_2 [partial_3 y_2]) (con integer 2)]])
  [(builtin subtractInteger) (con integer 100)]]
--- result
(con integer 197)
--- logs
[]
